<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"

            android:title="@string/profile" />
        <item
            android:id="@+id/nav_wallet"

            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_networks"
            android:title="@string/networks" />
        <item
            android:id="@+id/nav_refer_and_earn"

            android:title="@string/refer_and_earn" />
        <item
            android:id="@+id/nav_logout"

            android:title="@string/logout" />
    </group>

</menu>
