<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inAccountAmount"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_amount"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/inAccountHolderName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_holder_name"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/inAccountAccountNo"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_Account_number"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/inAccountIFSCCode"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_ifsc_code"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/inAccountBankName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_bank_name"
            android:inputType="phone"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />


        <Button
            android:id="@+id/inAccountButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_back"
            android:paddingEnd="8dp"
            android:onClick="sendRequestInAccount"
            android:paddingStart="8dp"
            android:text="@string/send_request"
            android:textColor="#FFFF" />
    </LinearLayout>

</ScrollView>