<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <android.support.v7.widget.CardView
            android:layout_width="290dp"
            android:background="@drawable/edit_text_blue_border"
            android:layout_height="50dp"
            android:layout_gravity="center">

            <Spinner
                android:id="@+id/countryCodeSpinnerSignUp"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:singleLine="true" />
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/citySignUp"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="Enter City"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/referralSignInCodeTextView"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/do_you_have_a_referral_code"
            android:textColor="#000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/referralCodeEditText"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_referral_code"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_back"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/sign_up"
            android:textColor="#FFFF" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>