<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PayPalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/payTmAmount"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_amount"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/payPalEmail"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:focusable="true"
            android:hint="@string/enter_paypal_no"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />


        <Button
            android:id="@+id/payPalButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_back"
            android:paddingEnd="8dp"
            android:onClick="sendRequestPayPal"
            android:paddingStart="8dp"
            android:text="@string/send_request"
            android:textColor="#FFFF" />
    </LinearLayout>
</ScrollView>