<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_refer_and_earn">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"></View>

    <TextView
        android:id="@+id/shareReferCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/share_your_referral_code"
        android:textColor="#0055B7"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="5dp">

        <Button
            android:id="@+id/inviteFriendsButton"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:background="#2C7BD7"
            android:text="@string/invite_friends"
            android:textColor="#FFFF" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/yourReferCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/your_referral_code"
        android:textColor="#144a89"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/referCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:text=""

        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"></View>

</LinearLayout>