<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeMainFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonHomeWallet"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_blue_border"
            android:text="@string/wallet"
            app:layout_constraintBottom_toTopOf="@+id/buttonHomeGame"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/buttonHomeReferAndEarn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit_text_blue_border"
            android:text="@string/refer_and_earn"
            app:layout_constraintBottom_toTopOf="@+id/addView2"
            app:layout_constraintEnd_toEndOf="@+id/buttonHomeLearnToUse"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/buttonHomeLearnToUse"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/buttonHomeGame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit_text_blue_border"
            android:text="@string/game"
            app:layout_constraintBottom_toTopOf="@+id/addView2"
            app:layout_constraintEnd_toEndOf="@+id/buttonHomeWallet"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/buttonHomeWallet"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/buttonHomeLearnToUse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_blue_border"
            android:text="@string/learn_to_use"
            app:layout_constraintBottom_toTopOf="@+id/buttonHomeReferAndEarn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.4" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/addView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            ads:adSize="BANNER"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/buttonHomeReferAndEarn"
            app:layout_constraintStart_toStartOf="@+id/buttonHomeGame" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/addView4"
            app:layout_constraintEnd_toEndOf="@+id/addView2"

            app:layout_constraintStart_toStartOf="@+id/addView2"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="484dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/addView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/addView5"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/addView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addView4"
            app:layout_constraintStart_toStartOf="@+id/addView4" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
